--- a/index.html
+++ b/index.html
@@ -10,19 +10,40 @@
 </head>
   
   
-  
-  
 <body>
+  <header id="cabecalho">
+    <nav>
+      <object width="100%" height="40px" data="menu_home.html"></object>  
+      <img id="inicio" src="Biblioteca _doc/Logo.jpg"/>
   
-<img id="inicio" src="Biblioteca _doc/Logo.jpg"/>
+    </nav>   
+  </header>
+
   
- 
+  <p><b>Cursos</b></p>
+  <ul>
+    <li>
+     <a href="ads.html"> Análise e Desenvolvimento de Sistemas</a>
+    </li>
+    <li>
+     <a href="engenharia_producao.html">  Engenharia de Produção</a>
+    </li>
+    <li>
+     <a href="gestão_TI.html"> Gestão em Tecnologia da Informação</a>
+    </li>
+    <li>
+     <a href="Letras.html"> Letras</a>
+    </li>
+     <li>
+     <a href="gestao_publica.html"> Gestão Publica</a>
+     </li>
+    
+  </ul>
 
   <p><b>Eventos</b></p>
   <br>
-  <br>
   
-  <img src='Biblioteca _doc/SEJA_RARO.jpg', width = "900" />
+  <img src='Biblioteca _doc/SEJA_RARO.jpg' width = "50%" height="50%" />
   
   
   <p>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</p>
@@ -47,7 +68,7 @@
   <br>
 <p>IFSP - Câmpus Pirituba - Av. Mutinga, 951 - Jardim Santo Elias - CEP: 05110-000 - São Paulo/SP - Contato: (011) 2504-0100</p>
 
-    <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
+     
 </body>
 
 </html>
