--- a/menu_home.html
+++ b/menu_home.html
@@ -13,8 +13,12 @@
     
     <a href="index.html" target="_top">HOME</a>
     |
+    <a href="eventos.html" target="_top">EVENTOS</a>
+    |
     <a href="contato.html" target="_top">CONTATO</a>
     |
-    <A href="instituto.html" target="_top">SOBRE</A>
+    <a href="instituto.html" target="_top">SOBRE</a>
+    |
+    <a href="login.html" target="_top">ENTRAR</a>
   </body>
   </html>
