--- a/menu_home.html
+++ b/menu_home.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Letras</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="CSS/Menu.css" rel="stylesheet" type="text/css" />
   <link rel="icon" href="Biblioteca _doc/favicon.ico"/>
 </head>
 <body>
@@ -20,5 +20,6 @@
     <a href="instituto.html" target="_top">SOBRE</a>
     |
     <a href="login.html" target="_top">ENTRAR</a>
+    
   </body>
   </html>
