--- a/rodapé.html
+++ b/rodapé.html
@@ -10,7 +10,7 @@
     <br>
     <br>
       <div id="facebook" align="left">
-        <a href="https://www.facebook.com/ifsppirituba" target="_top"><img scr="Biblioteca_doc/facebook.png"  title="IFSP(PT) Facebook" alt="LogoFacebook"></a>
+        <a href="https://www.facebook.com/ifsppirituba" target="_top"><img scr='Biblioteca_doc/facebook.png' title="IFSP(PT) Facebook" alt="LogoFacebook" width="40" height="40"></a>
       </div>
       
       <p>IFSP - Câmpus Pirituba - Av. Mutinga, 951 - Jardim Santo Elias - CEP: 05110-000 - São Paulo/SP - Contato: (011) 2504-0100</p>
