--- a/html/login.html
+++ b/html/login.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link href="../css/signin.css" rel="stylesheet">
     <link rel="icon" href="../imagens/favicon.ico"/>
-  <link rel="stylesheet" href="../css/formulario.css">
+  
     <title>Entrar - IFSP - Pirituba - DWBA4</title>
 </head>
 <body>
@@ -16,24 +18,25 @@
     </header>
 
     <main>
-        <h1>Entrar</h1>
-        <form method="post">
-            <div>
-                <label for="login-usuario">Usuário</label>
-                <input name="login-usuario" type="email" id="login-usuario" required> 
-            </div>
-            <br>
-            <div>
-                <label for="login-senha">Senha</label>
-                <input name="login-senha" type="password" id="login-senha" required>
-            </div>
-            <br>
-            <div>
-                <input type="submit" value="Entrar">
-                <a href="#">Esqueci a Senha</a>
-            </div>
+      <form class="form-signin">
+	    	<img class="mb-4" src="../imagens/ifsp.png" alt="" width="72" height="72">
+		  <h1 class="h3 mb-3 font-weight-normal">Faça login</h1>
+		  <label for="inputEmail" class="sr-only">Endereço de email</label> 
+		  <input type="email" id="inputEmail" class="form-control" placeholder="Seu email" required="" autofocus=""> 
+	  	<label for="inputPassword" class="sr-only">Senha</label>
+		  <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required="">
+	  	<div class="checkbox mb-3">
+		    <label>
+		    <input type="checkbox" value="remember-me">Lembrar de mim</label>
+		</div>
+		<div>
+		  <a href="#">Esqueci a senha</a>
+		</div>
+		  <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+		  <p class="mt-5 mb-3 text-muted">© 2020</p>
+	</form> 
             
-        </form>
+        
     </main>    
 
     <footer>
